# MySimplePaint

./: CMakeLists.txt  Makefile  README.md  main.cpp
definitions/: Adapter.cpp  Application.cpp  GraphicEditor.cpp  UIBasic.cpp
headers/: Adapter.hpp  Application.hpp  GraphicEditor.hpp  UIBasic.hpp
